css/style.css
@font-face
{
    font-family: 'oxygen';
    src: url('./../fonts/oxygen/oxygen-regular-webfont.eot');
    src: url('./../fonts/oxygen/oxygen-regular-webfont.eot?#iefix') format('embedded-opentype'),
        url('./../fonts/oxygen/oxygen-regular-webfont.woff2') format('woff2'),
        url('./../fonts/oxygen/oxygen-regular-webfont.woff') format('woff'),
        url('./../fonts/oxygen/oxygen-regular-webfont.ttf') format('truetype'),
        url('./../fonts/oxygen/oxygen-regular-webfont.svg#oxygen') format('svg');
    font-weight: 400;
    font-style: normal;
}

@font-face
{
    font-family: 'lora';
    src: url('./../fonts/lora/lora-regular-webfont.eot');
    src: url('./../fonts/lora/lora-regular-webfont.eot?#iefix') format('embedded-opentype'),
        url('./../fonts/lora/lora-regular-webfont.woff2') format('woff2'),
        url('./../fonts/lora/lora-regular-webfont.woff') format('woff'),
        url('./../fonts/lora/lora-regular-webfont.ttf') format('truetype'),
        url('./../fonts/lora/lora-regular-webfont.svg#lora') format('svg');
    font-weight: 400;
    font-style: normal;
}

@font-face
{
    font-family: 'roboto';
    src: url('./../fonts/roboto/roboto-regular.eot');
    src: url('./../fonts/roboto/roboto-regular.eot?#iefix') format('embedded-opentype'),
        url('./../fonts/roboto/roboto-regular.woff2') format('woff2'),
        url('./../fonts/roboto/roboto-regular.woff') format('woff'),
        url('./../fonts/roboto/roboto-regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}

body
{
    margin: 0;
}

.container-wrap
{
    display: flex;
    justify-content: center;
    background-color: #F5F5F5;
}

.container
{
    background-color: #F7F7F7;
    width: 1440px;
}

.top-banner
{
    max-height: 500px;
    background: url(./../img/bg-header-01.png) no-repeat;
    background-color: #000000;
}

.header
{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.top-banner__header
{
    margin-bottom: 131px;
    padding: 20px 270px 0 250px; 
}

.logo
{
    font: 26px 'lora';
    transition: all .4s ease;
    text-decoration: none;
}

.logo_theme_dark
{
    color: #FFFFFF;
}

.logo_theme_dark:hover {
    color: #000000;
    text-shadow: 0 0 5px #FFFFFF;
}

.menu
{
    display: flex;
    list-style-type: none;
}

.header__menu
{
    padding: 0;
    margin: 0;
    position: relative;
    list-style-type: none;
}

.menu-item_width_wide {
    margin-right: 40px;
} 

.menu-item_width_wide:last-child 
{
    margin-right: 0;    
}

.menu-item__link
{
    font: 12px/1.67 'oxygen';
    letter-spacing: 0.6px;
    text-transform: uppercase;
    padding: 8px 0;
    text-decoration: none;
}

.menu-item__link_theme_dark
{
    color: #FFFFFF;
}

.menu-item__link_theme_dark:hover
{
    border-bottom: 1px dotted #FFFFFF;
}

.menu-item__link_theme_opaque
{
    color: rgba(255, 255, 255, 0.6);
}

.menu-item__link_theme_opaque:hover
{
    border-bottom: 1px dotted rgba(255, 255, 255, 0.6);
}

.menu-item__link_theme_light
{
    color: #2E2E2E;
}

.menu-item__link_theme_light:hover
{
    border-bottom: 1px dotted #2E2E2E;
}

.main-title-block,
.article-title-block
{
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.top-banner__title-block
{
    padding-bottom: 157px;
}

.main-title
{
    margin: 0;
    font: 50px/1.02 'lora';
    text-align: center;
    letter-spacing: 2px;
    color: #FFFFFF;
}

.main-title-block__title
{
    margin-bottom: 20px;
}

.main-subtitle
{
    font: 17px/1.18 'oxygen';
    text-align: center;
    color: rgba(255, 255, 255, 0.63);
}

.main-title-block__subtitle
{
    margin-bottom: 31px;
}

.main-title-block__button
{
    display: inline-block;
    padding: 12px 31px;
    border-radius: 3px;
    font: 13px/1.54 'oxygen';
    align-self: center;
}

.button_orange
{
    color: #FFFFFF;
    background: #DD783F;
    transition: all .3s ease-in-out;
    text-decoration: none;
}

.button_orange:hover
{
    background: rgb(173, 64, 0);
}

.themes-menu-wrap
{
    background: #FFFFFF;
    padding: 22px 240px 23px;
    margin-bottom: 60px;
}

.themes-menu-wrap__content
{
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.themes-menu
{
    display: flex;
    justify-content: space-around;
    display: flex;
}

.themes-menu__item
{
    list-style-type: none;
    padding-left: 0;
}

.themes-menu__link
{
    font: 14px/1.43 'lora';
    text-align: center;
    color: #768088;
    text-decoration: none;
}

.themes-menu__link:hover
{
    color: #000000;
}

.section-block
{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.featured 
{
    margin-bottom: 67px;
}

.section-title
{
    font: 20px/1.35 'oxygen';
    text-align: center;
    letter-spacing: 2px;
    color: #2E2E2E;
    margin: 0 0 23px;
    padding: 0 13px 16px;
    border-bottom: 1px solid #DEDEDE;
}

.featured-posts
{
    display: flex;
}

.featured-posts__item
{
    margin-right: 20px;
    min-width: 460px;
    min-height: 280px;
    position: relative;
    border-radius: 3px;
}

.featured-post__item:last-child
{
    margin-right: 0;
}

.featured-post
{
    display: flex;
    flex-direction: column;
    justify-content: end;
    text-decoration: none;
}

.background__road-ahead
{
    background: url(./../img/featured-01.png) no-repeat center;
}

.background__from-top-down
{
    background: url(./../img/featured-02.png) no-repeat center;
}

.background__road-ahead,
.background__from-top-down
{
    background-size: 460px 280px;
    -webkit-transition: background-size .5s ease;
    transition: background-size .5s ease;
}

.background__road-ahead:hover,
.background__from-top-down:hover
{
    background-size: 110% 110%;
}

.featured-post__tag-button
{
    position: absolute;
    top: 20px;
    left: 20px;
    border-radius: 2px;
    font: 12px/1.08 'oxygen';
    text-transform: uppercase;
    padding: 6px 9px 7px;
}

.featured-post__inner
{
    padding: 20px;
}
/* ... */

